--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=spring-boot
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/amigos
+spring.datasource.username=aldousroy
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
