--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/amigos
 spring.datasource.username=aldousroy
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.schema=DEBUG
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
